--- a/index.html
+++ b/index.html
@@ -4,27 +4,23 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bruke Gaming Store</title>
-
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
-body { background:#121212; color:white; }
-header { display:flex; justify-content:space-between; align-items:center; padding:20px; background:#1f1f1f; }
-header h1 { color:#ff6f61; }
-nav a { margin:0 15px; color:white; font-weight:bold; text-decoration:none; }
-section { padding:60px 20px; }
-.section-title { text-align:center; color:#ff6f61; margin-bottom:30px; }
-
-.store { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; }
-.product { background:#1f1f1f; padding:20px; border-radius:15px; text-align:center; }
-.product img { width:100%; border-radius:10px; }
-.product button { margin-top:10px; padding:10px; background:#ff6f61; border:none; color:white; border-radius:5px; cursor:pointer; }
-
-#cart-items div { display:flex; justify-content:space-between; margin-bottom:10px; }
-
-footer { text-align:center; padding:20px; background:#1f1f1f; color:#888; }
+body { background: #121212; color: #fff; }
+header { display: flex; justify-content: space-between; align-items: center; padding: 20px; background: #1f1f1f; }
+header h1 { color: #ff6f61; }
+nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: bold; }
+section { padding: 60px 20px; }
+.section-title { text-align: center; color: #ff6f61; margin-bottom: 30px; }
+.store { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; }
+.product { background: #1f1f1f; padding: 20px; border-radius: 15px; text-align: center; }
+.product img { width: 100%; border-radius: 10px; margin-bottom: 10px; }
+.product button { padding: 10px 20px; background: #ff6f61; border: none; color: white; border-radius: 5px; cursor: pointer; }
+#cart-items div { display: flex; justify-content: space-between; margin-bottom: 10px; }
+footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; }
+button:hover { opacity: 0.8; }
 </style>
 </head>
-
 <body>
 
 <header>
@@ -38,40 +34,36 @@ footer { text-align:center; padding:20px; background:#1f1f1f; color:#888; }
 <section id="store">
 <h2 class="section-title">Store</h2>
 <div class="store">
-
 <div class="product">
-<img src="https://picsum.photos/200?1">
+<img src="https://picsum.photos/200?1" alt="Gaming Headset">
 <h3>Gaming Headset</h3>
-<p>$25</p>
+<p>$25.00</p>
 <button>Add to Cart</button>
 </div>
-
 <div class="product">
-<img src="https://picsum.photos/200?2">
+<img src="https://picsum.photos/200?2" alt="RGB Mouse">
 <h3>RGB Mouse</h3>
-<p>$15</p>
+<p>$15.00</p>
 <button>Add to Cart</button>
 </div>
-
 <div class="product">
-<img src="https://picsum.photos/200?3">
+<img src="https://picsum.photos/200?3" alt="Gaming Keyboard">
 <h3>Gaming Keyboard</h3>
-<p>$45</p>
+<p>$45.00</p>
 <button>Add to Cart</button>
 </div>
-
 </div>
 </section>
 
 <section id="cart">
 <h2 class="section-title">Your Cart</h2>
 <div id="cart-items"></div>
-<p id="cart-total">Total: $0</p>
+<p id="cart-total">Total: $0.00</p>
 <button id="checkout-btn">Checkout</button>
 </section>
 
 <footer>
-© 2026 Bruke Gaming Store
+&copy; 2026 Bruke Gaming Store
 </footer>
 
 <script>
@@ -79,6 +71,7 @@ let cart = [];
 const buttons = document.querySelectorAll(".product button");
 const cartItems = document.getElementById("cart-items");
 const cartTotal = document.getElementById("cart-total");
+const checkoutBtn = document.getElementById("checkout-btn");
 
 buttons.forEach(btn => {
   btn.addEventListener("click", () => {
@@ -92,17 +85,16 @@ buttons.forEach(btn => {
 function updateCart(){
   cartItems.innerHTML = "";
   let total = 0;
-
   cart.forEach((item, index) => {
     total += item.price;
-    cartItems.innerHTML += `
-      <div>
-        ${item.product} - $${item.price}
-        <button onclick="removeItem(${index})">X</button>
-      </div>`;
+    const div = document.createElement("div");
+    div.innerHTML = `
+      ${item.product} - $${item.price.toFixed(2)}
+      <button onclick="removeItem(${index})">X</button>
+    `;
+    cartItems.appendChild(div);
   });
-
-  cartTotal.innerText = "Total: $" + total;
+  cartTotal.innerText = "Total: $" + total.toFixed(2);
 }
 
 function removeItem(i){
@@ -110,11 +102,11 @@ function removeItem(i){
   updateCart();
 }
 
-document.getElementById("checkout-btn").addEventListener("click", () => {
+checkoutBtn.addEventListener("click", () => {
   if(cart.length === 0){
     alert("Cart is empty!");
   } else {
-    alert("Order placed! Total: $" + cart.reduce((s,i)=>s+i.price,0));
+    alert("Thanks for your order! Total: $" + cart.reduce((s,i)=>s+i.price,0).toFixed(2));
     cart = [];
     updateCart();
   }
