Update store name to 'Bruke's Gaming Store'

--- a/bruke_gaming_store.html
+++ b/bruke_gaming_store.html
@@ -44,7 +44,7 @@
 <body>
 
     <header>
-        <h1>Bruke Gaming Store</h1>
+        <h1>Bruke's Gaming Store</h1>
         <nav>
             <a href="#store">Store</a>
             <a href="#about">About</a>
@@ -79,7 +79,7 @@
     <section id="about">
         <h2 class="section-title">About Bruke</h2>
         <div class="about">
-            <p>Welcome to Bruke Gaming Store! We provide the coolest gaming items, accessories, and collectibles for gamers of all kinds. Our goal is to make your gaming experience epic and fun!</p>
+            <p>Welcome to Bruke's Gaming Store! We provide the coolest gaming items, accessories, and collectibles for gamers of all kinds. Our goal is to make your gaming experience epic and fun!</p>
         </div>
     </section>
 
@@ -96,7 +96,7 @@
     </section>
 
     <footer>
-        &copy; 2026 Bruke Gaming Store. All rights reserved.
+        &copy; 2026 Bruke's Gaming Store. All rights reserved.
     </footer>
 
 </body>
