Update title and header to include apostrophe

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bruke Gaming Store</title>
+<title>Bruke's Gaming Store</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
 body { background: #121212; color: #fff; }
@@ -24,7 +24,7 @@ button:hover { opacity: 0.8; }
 <body>
 
 <header>
-<h1>Bruke Gaming Store</h1>
+<h1>Bruke's Gaming Store</h1>
 <nav>
 <a href="#store">Store</a>
 <a href="#cart">Cart</a>
