--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ button:hover { opacity: 0.8; }
 </section>
 
 <footer>
-&copy; 2026 Bruke Gaming Store
+&copy; 2026 Bruke's Gaming Store
 </footer>
 
 <script>
