--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bruke's Gaming Store</title>
+<title>Bruke Gaming Store</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
 body { background: #121212; color: #fff; }
@@ -24,10 +24,11 @@ button:hover { opacity: 0.8; }
 <body>
 
 <header>
-<h1>Bruke's Gaming Store</h1>
+<h1>Bruke Gaming Store</h1>
 <nav>
 <a href="#store">Store</a>
 <a href="#cart">Cart</a>
+<a href="#associates">Associates</a>
 </nav>
 </header>
 
@@ -62,8 +63,25 @@ button:hover { opacity: 0.8; }
 <button id="checkout-btn">Checkout</button>
 </section>
 
+<!-- NEW ASSOCIATES SECTION -->
+<section id="associates">
+<h2 class="section-title">Our Associates</h2>
+
+<p><strong>Bruke Yosef</strong> – Founder & CEO</p>
+<p><strong>Jacob Robertson</strong> – Software Engineer</p>
+<p><strong>Blessing Nwosu</strong> – Social Media & Advertising</p>
+<p><strong>Jude Salmon</strong> – Chief of Advertising</p>
+<p><strong>Wedeb Abraham</strong> – Ad & Tech Support</p>
+<p><strong>Sander Spikkeland</strong> – Graphic Design</p>
+<p><strong>Grover Nickel</strong> – 3D Design</p>
+<p><strong>Eli Stephens</strong> – Human Resources</p>
+<p><strong>Roman Mackie</strong> – Security Team</p>
+<p><strong>Luke Cole</strong> – Security Team</p>
+
+</section>
+
 <footer>
-&copy; 2026 Bruke's Gaming Store
+&copy; 2026 Bruke Gaming Store
 </footer>
 
 <script>
