--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@ header { display: flex; justify-content: space-between; align-items: center; pad
 header h1 { color: #ff6f61; }
 nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: bold; }
 section { padding: 60px 20px; }
-.section-title { text-align: center; color: #ff6f61; margin-bottom: 30px; }
+.section-title { text-align: center; color: #ff6f61; margin-bottom: 30px; font-size: 2em; }
 .store { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; }
-.product { background: #1f1f1f; padding: 20px; border-radius: 15px; text-align: center; }
+.product { background: #1f1f1f; padding: 20px; border-radius: 15px; text-align: center; transition: transform 0.3s; }
+.product:hover { transform: scale(1.05); }
 .product img { width: 100%; border-radius: 10px; margin-bottom: 10px; }
+.product h3 { color: #ffb347; margin-bottom: 10px; }
+.product p { margin-bottom: 15px; }
 .product button { padding: 10px 20px; background: #ff6f61; border: none; color: white; border-radius: 5px; cursor: pointer; }
+.product button:hover { opacity: 0.8; }
 #cart-items div { display: flex; justify-content: space-between; margin-bottom: 10px; }
-footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; }
-button:hover { opacity: 0.8; }
+footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; margin-top:50px; }
+.associates { max-width: 600px; margin: 0 auto; text-align: center; color: #fff; }
+.associates ul { list-style: none; padding: 0; }
+.associates li { margin-bottom: 5px; color: #ffb347; }
+img#featured { display: block; margin: 20px auto; max-width: 300px; border-radius: 10px; }
 </style>
 </head>
 <body>
@@ -36,24 +43,27 @@ button:hover { opacity: 0.8; }
 <h2 class="section-title">Store</h2>
 <div class="store">
 <div class="product">
-<img src="https://picsum.photos/200?1" alt="Gaming Headset">
-<h3>Gaming Headset</h3>
-<p>$25.00</p>
+<img src="https://via.placeholder.com/200" alt="Dragon Cannelloni with Lava + Taco Trait">
+<h3>Dragon Cannelloni with Lava + Taco Trait</h3>
+<p>$400.00</p>
 <button>Add to Cart</button>
 </div>
 <div class="product">
-<img src="https://picsum.photos/200?2" alt="RGB Mouse">
-<h3>RGB Mouse</h3>
-<p>$15.00</p>
+<img src="https://via.placeholder.com/200" alt="Cursed Spaggetti Toilet">
+<h3>Cursed Spaggetti Toilet</h3>
+<p>$37.00</p>
 <button>Add to Cart</button>
 </div>
 <div class="product">
-<img src="https://picsum.photos/200?3" alt="Gaming Keyboard">
-<h3>Gaming Keyboard</h3>
-<p>$45.00</p>
+<img src="https://via.placeholder.com/200" alt="Kechtep and Mustard 127m">
+<h3>Kechtep and Mustard 127m</h3>
+<p>$127.00</p>
 <button>Add to Cart</button>
 </div>
 </div>
+
+<img id="featured" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFGzBtu0C5weI4v9lj0on8ovdiinR_mWgv7A&s" alt="New Mustard and Ketchup Brainrot Picture | TikTok"/>
+
 </section>
 
 <section id="cart">
@@ -63,21 +73,17 @@ button:hover { opacity: 0.8; }
 <button id="checkout-btn">Checkout</button>
 </section>
 
-<!-- NEW ASSOCIATES SECTION -->
 <section id="associates">
 <h2 class="section-title">Our Associates</h2>
-
-<p><strong>Bruke Yosef</strong> – Founder & CEO</p>
-<p><strong>Jacob Robertson</strong> – Software Engineer</p>
-<p><strong>Blessing Nwosu</strong> – Social Media & Advertising</p>
-<p><strong>Jude Salmon</strong> – Chief of Advertising</p>
-<p><strong>Wedeb Abraham</strong> – Ad & Tech Support</p>
-<p><strong>Sander Spikkeland</strong> – Graphic Design</p>
-<p><strong>Grover Nickel</strong> – 3D Design</p>
-<p><strong>Eli Stephens</strong> – Human Resources</p>
-<p><strong>Roman Mackie</strong> – Security Team</p>
-<p><strong>Luke Cole</strong> – Security Team</p>
-
+<div class="associates">
+<ul>
+<li>Jude Salmon</li>
+<li>Wedeb Abraham</li>
+<li>Sander Spikkeland</li>
+<li>Grover Nickel</li>
+<li>Luke Cole</li>
+</ul>
+</div>
 </section>
 
 <footer>
@@ -106,10 +112,7 @@ function updateCart(){
   cart.forEach((item, index) => {
     total += item.price;
     const div = document.createElement("div");
-    div.innerHTML = `
-      ${item.product} - $${item.price.toFixed(2)}
-      <button onclick="removeItem(${index})">X</button>
-    `;
+    div.innerHTML = `${item.product} - $${item.price.toFixed(2)} <button onclick="removeItem(${index})">X</button>`;
     cartItems.appendChild(div);
   });
   cartTotal.innerText = "Total: $" + total.toFixed(2);
