--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bruke Gaming Store</title>
+<title>Bruke's Gaming Store</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
 body { background: #121212; color: #fff; }
@@ -31,7 +31,7 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 <body>
 
 <header>
-<h1>Bruke Gaming Store</h1>
+<h1>Bruke's Gaming Store</h1>
 <nav>
 <a href="#store">Store</a>
 <a href="#cart">Cart</a>
@@ -87,7 +87,7 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 </section>
 
 <footer>
-&copy; 2026 Bruke Gaming Store
+&copy; 2026 Bruke's Gaming Store
 </footer>
 
 <script>
