--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bruke's Gaming Store</title>
+<title>Bruke Gaming Store</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
 body { background: #121212; color: #fff; }
@@ -31,7 +31,7 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 <body>
 
 <header>
-<h1>Bruke's Gaming Store</h1>
+<h1>Bruke Gaming Store</h1>
 <nav>
 <a href="#store">Store</a>
 <a href="#cart">Cart</a>
@@ -43,13 +43,13 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 <h2 class="section-title">Store</h2>
 <div class="store">
 <div class="product">
-<img src="https://via.placeholder.com/200" alt="Dragon Cannelloni with Lava + Taco Trait">
+<img src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fpng&attachment_token=AOo0EEUtMD0VMI80HrAOVvUoO9D8tGPzkftyAGjiieot6pRWzLAw71YDDjqEFeCdfWkpiFAJuwriS5fufPj5L6N%2FwZxjMGgoY%2BmtgMt4PLivSVLlgncftVwPW%2F68o7MwiCho3ikTmp0SGGCWtDu52t48zBjNtgaxWJyWgIbQ28qCQE8eKbbpkaHxYf57ImNMcScLag6C0Ee7kZZHgImjwQp8PdSNEnl8ytAd%2BI8tNmVhlx0cc8gH1Icu%2F%2BRj62PBAyYXSbFcvrduCp%2Bk4QEsE%2Bj5%2FxnhqOIifzTz9hoKVJJlxxCdSdwg01n0rWnEZc7oXhQBc8Po1O15vp1d9ahuIjV%2B%2FstQgwZKwMX%2FHyt7rm1vKDSJ%2FXRrQi7XUD9RKncWi6Gy9H1iBw7NYrwF0pS76%2BkU%2BUZl4e9tpOc1Gsx7bxlH8BjXufQV4WC2SThFHFsMdgt9jgDniUDxfitDlH5UkLgJhjxkqgwDaqwMqNbPmnR%2BRK%2BOw6yvxPwDFN14O9NmjCXFEAyNgq8Jz2ljVdRD6ltc2pl%2Fdr0gHBEYrbLQ97Q6u4WM7AZUJANDXVjOTD3FmAqlITdoVyJPUWI8VL97%2FIvWyOQF6X%2Fs3D3%2FrPDCwRLi4dgFhg%3D%3D&allow_caching=true&sz=w512" alt="Dragon Cannelloni with Lava + Taco Trait">
 <h3>Dragon Cannelloni with Lava + Taco Trait</h3>
 <p>$400.00</p>
 <button>Add to Cart</button>
 </div>
 <div class="product">
-<img src="https://via.placeholder.com/200" alt="Cursed Spaggetti Toilet">
+<img src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fpng&attachment_token=AOo0EEXMPXJt4MoRDVf09BLOfEBizuQKI5AYwWX%2Fk5ne4N%2Br2Gs8rkB86FODqknUrouPm1P%2FRfHkiIywUGX0h84j4FJobnHY2CClfrAGJjyu8vb%2BY4m1%2FiTyrQ%2FRUrnNhdFGuTm%2Fg294%2Beb4JEg%2B24qxD4y71dloTTlErhhb%2F9JZUBi14quHB32lksmYGaVra0vzwwYnaXUQ6fBcbNAl%2BtnF7rb1ltWqck%2BvbU7NBu9JRpCy3au%2F4VHVLreWRdDiAwbf8WMCqwmnx8vN%2B2ugYuemsNUH75MtL6kGfDo%2B3CP%2B1goMxQNGkKzmQRx6DEaUaI5b9iYpsCnYZGZduTmHHan1Lglwl5CZODro%2Fg0PvHPoEUUl%2BAq8M52XLm8dZkZDJ1OMVH%2BbqL0eBG2CKXWeJzsF19koJQfYdKRBY9LefIOaZGdf9fJdo5ZwM1o5rAL6mhNY%2BLVPkEWoSFnHMHNmUp5BwICvUdy8JT5v3832brXC3kQZdQ%2B9cNiOmYmTz3nuOZEalO7Hz5rltuHOcPRXYZme40ARc71%2FNj7TI8FBM%2Fv4vF5MrC7%2B9tFw7iybQPWJ%2F1UEyvBSg2h6NZCPnwx8B%2F0%2BACu%2F0zokU5PU2e3qxdTtg5sFRQ%3D%3D&allow_caching=true&sz=w512" alt="Cursed Spaggetti Toilet">
 <h3>Cursed Spaggetti Toilet</h3>
 <p>$37.00</p>
 <button>Add to Cart</button>
@@ -57,7 +57,7 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 <div class="product">
 <img src="https://via.placeholder.com/200" alt="Kechtep and Mustard 127m">
 <h3>Kechtep and Mustard 127m</h3>
-<p>$127.00</p>
+<p>$27.00</p>
 <button>Add to Cart</button>
 </div>
 </div>
@@ -87,7 +87,7 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 </section>
 
 <footer>
-&copy; 2026 Bruke's Gaming Store
+&copy; 2026 Bruke Gaming Store
 </footer>
 
 <script>
