--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ section { padding: 60px 20px; }
 .product p { margin-bottom: 15px; }
 .product button { padding: 10px 20px; background: #ff6f61; border: none; color: white; border-radius: 5px; cursor: pointer; }
 .product button:hover { opacity: 0.8; }
-#cart-items div { display: flex; justify-content: space-between; margin-bottom: 10px; }
+#cart-items div { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
+#cart-items img { width: 40px; height: 40px; border-radius: 5px; margin-right: 10px; }
 footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; margin-top:50px; }
 .associates { max-width: 600px; margin: 0 auto; text-align: center; color: #fff; }
 .associates ul { list-style: none; padding: 0; }
 .associates li { margin-bottom: 5px; color: #ffb347; }
-img#featured { display: block; margin: 20px auto; max-width: 300px; border-radius: 10px; }
 </style>
 </head>
 <body>
@@ -42,28 +42,31 @@ img#featured { display: block; margin: 20px auto; max-width: 300px; border-radiu
 <section id="store">
 <h2 class="section-title">Store</h2>
 <div class="store">
+<!-- Dragon Cannelloni -->
 <div class="product">
 <img src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fpng&attachment_token=AOo0EEUtMD0VMI80HrAOVvUoO9D8tGPzkftyAGjiieot6pRWzLAw71YDDjqEFeCdfWkpiFAJuwriS5fufPj5L6N%2FwZxjMGgoY%2BmtgMt4PLivSVLlgncftVwPW%2F68o7MwiCho3ikTmp0SGGCWtDu52t48zBjNtgaxWJyWgIbQ28qCQE8eKbbpkaHxYf57ImNMcScLag6C0Ee7kZZHgImjwQp8PdSNEnl8ytAd%2BI8tNmVhlx0cc8gH1Icu%2F%2BRj62PBAyYXSbFcvrduCp%2Bk4QEsE%2Bj5%2FxnhqOIifzTz9hoKVJJlxxCdSdwg01n0rWnEZc7oXhQBc8Po1O15vp1d9ahuIjV%2B%2FstQgwZKwMX%2FHyt7rm1vKDSJ%2FXRrQi7XUD9RKncWi6Gy9H1iBw7NYrwF0pS76%2BkU%2BUZl4e9tpOc1Gsx7bxlH8BjXufQV4WC2SThFHFsMdgt9jgDniUDxfitDlH5UkLgJhjxkqgwDaqwMqNbPmnR%2BRK%2BOw6yvxPwDFN14O9NmjCXFEAyNgq8Jz2ljVdRD6ltc2pl%2Fdr0gHBEYrbLQ97Q6u4WM7AZUJANDXVjOTD3FmAqlITdoVyJPUWI8VL97%2FIvWyOQF6X%2Fs3D3%2FrPDCwRLi4dgFhg%3D%3D&allow_caching=true&sz=w512" alt="Dragon Cannelloni with Lava + Taco Trait">
 <h3>Dragon Cannelloni with Lava + Taco Trait</h3>
 <p>$400.00</p>
 <button>Add to Cart</button>
 </div>
+
+<!-- Cursed Spaggetti Toilet -->
 <div class="product">
 <img src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fpng&attachment_token=AOo0EEXMPXJt4MoRDVf09BLOfEBizuQKI5AYwWX%2Fk5ne4N%2Br2Gs8rkB86FODqknUrouPm1P%2FRfHkiIywUGX0h84j4FJobnHY2CClfrAGJjyu8vb%2BY4m1%2FiTyrQ%2FRUrnNhdFGuTm%2Fg294%2Beb4JEg%2B24qxD4y71dloTTlErhhb%2F9JZUBi14quHB32lksmYGaVra0vzwwYnaXUQ6fBcbNAl%2BtnF7rb1ltWqck%2BvbU7NBu9JRpCy3au%2F4VHVLreWRdDiAwbf8WMCqwmnx8vN%2B2ugYuemsNUH75MtL6kGfDo%2B3CP%2B1goMxQNGkKzmQRx6DEaUaI5b9iYpsCnYZGZduTmHHan1Lglwl5CZODro%2Fg0PvHPoEUUl%2BAq8M52XLm8dZkZDJ1OMVH%2BbqL0eBG2CKXWeJzsF19koJQfYdKRBY9LefIOaZGdf9fJdo5ZwM1o5rAL6mhNY%2BLVPkEWoSFnHMHNmUp5BwICvUdy8JT5v3832brXC3kQZdQ%2B9cNiOmYmTz3nuOZEalO7Hz5rltuHOcPRXYZme40ARc71%2FNj7TI8FBM%2Fv4vF5MrC7%2B9tFw7iybQPWJ%2F1UEyvBSg2h6NZCPnwx8B%2F0%2BACu%2F0zokU5PU2e3qxdTtg5sFRQ%3D%3D&allow_caching=true&sz=w512" alt="Cursed Spaggetti Toilet">
 <h3>Cursed Spaggetti Toilet</h3>
 <p>$37.00</p>
 <button>Add to Cart</button>
 </div>
+
+<!-- Kechtep and Mustard -->
 <div class="product">
-<img src="https://via.placeholder.com/200" alt="Kechtep and Mustard 127m">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFGzBtu0C5weI4v9lj0on8ovdiinR_mWgv7A&s" alt="Kechtep and Mustard 127m">
 <h3>Kechtep and Mustard 127m</h3>
 <p>$27.00</p>
 <button>Add to Cart</button>
 </div>
+
 </div>
-
-<img id="featured" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFGzBtu0C5weI4v9lj0on8ovdiinR_mWgv7A&s" alt="New Mustard and Ketchup Brainrot Picture | TikTok"/>
-
 </section>
 
 <section id="cart">
@@ -101,7 +104,8 @@ buttons.forEach(btn => {
   btn.addEventListener("click", () => {
     const product = btn.parentElement.querySelector("h3").innerText;
     const price = parseFloat(btn.parentElement.querySelector("p").innerText.replace("$",""));
-    cart.push({product, price});
+    const imgSrc = btn.parentElement.querySelector("img").src;
+    cart.push({product, price, imgSrc});
     updateCart();
   });
 });
@@ -112,7 +116,7 @@ function updateCart(){
   cart.forEach((item, index) => {
     total += item.price;
     const div = document.createElement("div");
-    div.innerHTML = `${item.product} - $${item.price.toFixed(2)} <button onclick="removeItem(${index})">X</button>`;
+    div.innerHTML = `<img src="${item.imgSrc}" alt="${item.product}"> ${item.product} - $${item.price.toFixed(2)} <button onclick="removeItem(${index})">X</button>`;
     cartItems.appendChild(div);
   });
   cartTotal.innerText = "Total: $" + total.toFixed(2);
