--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ section { padding: 60px 20px; }
 #checkout-btn { padding: 10px 20px; background: #ff6f61; border: none; color: #fff; border-radius: 5px; cursor: pointer; margin-top: 10px; }
 #checkout-btn:hover { opacity: 0.8; }
 
+#paypal-button-container { margin-top: 20px; }
+
 .associates { max-width: 1000px; margin: 0 auto; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; text-align: center; }
 .associate-card { background: #1f1f1f; padding: 20px; border-radius: 15px; width: 220px; transition: transform 0.3s, box-shadow 0.3s; color: #ffb347; }
 .associate-card:hover { transform: scale(1.05); box-shadow: 0 10px 25px rgba(255,111,97,0.4); color: #fff; }
@@ -54,13 +56,13 @@ footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; }
   <h2 class="section-title">Our Store</h2>
   <div class="store">
     <div class="product">
-      <img src="https://via.placeholder.com/200?text=Dragon+Cannelloni" alt="Dragon Cannelloni">
+      <img src="https://media.discordapp.net/attachments/1144487580913799232/1160067080748630076/Dragon_Cannelloni.png" alt="Dragon Cannelloni">
       <h3>Dragon Cannelloni</h3>
       <p>$400.00</p>
       <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/200?text=Cursed+Spaghetti+Toilet" alt="Cursed Spaghetti Toilet">
+      <img src="https://media.discordapp.net/attachments/1144487580913799232/1160067081224634438/Cursed_Spaghetti_Toilet.png" alt="Cursed Spaghetti Toilet">
       <h3>Cursed Spaghetti Toilet</h3>
       <p>$37.00</p>
       <button>Add to Cart</button>
@@ -79,6 +81,7 @@ footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; }
   <h2 class="section-title">Your Cart</h2>
   <div id="cart-items"></div>
   <p id="cart-total">Total: $0.00</p>
+  <button id="checkout-btn">Checkout</button>
   <div id="paypal-button-container"></div>
 </section>
 
@@ -148,12 +151,14 @@ footer { text-align: center; padding: 20px; background: #1f1f1f; color: #888; }
   &copy; 2026 Bruke Gaming Store
 </footer>
 
+<!-- CART FUNCTIONALITY -->
 <script>
 // CART FUNCTIONALITY
 let cart = [];
 const buttons = document.querySelectorAll(".product button");
 const cartItems = document.getElementById("cart-items");
 const cartTotal = document.getElementById("cart-total");
+const checkoutBtn = document.getElementById("checkout-btn");
 
 buttons.forEach(btn => {
   btn.addEventListener("click", () => {
@@ -180,6 +185,16 @@ function removeItem(i) {
   cart.splice(i,1);
   updateCart();
 }
+
+checkoutBtn.addEventListener("click", () => {
+  if(cart.length === 0){
+    alert("Cart is empty!");
+  } else {
+    alert("Thanks for your order! Total: $" + cart.reduce((sum,item)=>sum+item.price,0).toFixed(2));
+    cart = [];
+    updateCart();
+  }
+});
 </script>
 
 <!-- PAYPAL SDK -->
@@ -187,10 +202,22 @@ function removeItem(i) {
 <script>
 paypal.Buttons({
   createOrder: function(data, actions) {
+    let items = cart.map(item => ({
+      name: item.product,
+      unit_amount: { currency_code: "USD", value: item.price.toFixed(2) },
+      quantity: "1"
+    }));
     let total = cart.reduce((sum, item) => sum + item.price, 0);
     return actions.order.create({
       purchase_units: [{
-        amount: { value: total.toFixed(2) }
+        amount: {
+          currency_code: "USD",
+          value: total.toFixed(2),
+          breakdown: {
+            item_total: { currency_code: "USD", value: total.toFixed(2) }
+          }
+        },
+        items: items
       }]
     });
   },
